<resources>
    <string name="app_name">Weather</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">DataBase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not Registered yet ! SIGNUP Now</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="todo">TODO</string>
    <string name="get_live_temp">Get Live Weather Conditions</string>
    <string name="description">Description:</string>
    <string name="deg">Deg:</string>
    <string name="pridects_and_views">Pridects And Views</string>
    <string name="coordinates_lon">Coordinates: lon:</string>
    <string name="temp_min">Temp Min:</string>
    <string name="temp_max">Temp Max:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="weather">Weather:</string>
    <string name="lat">lat:</string>
    <string name="temperature">Temperature:</string>
    <string name="textview">TextView</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="fetch">Fetch</string>

</resources>
